testsuite/tests/overloadedrecflds/should_fail/T17965.stderr

T17965.hs:4:17: error: [GHC-29916]
    Multiple declarations of ‘f’
    Declared at: T17965.hs:3:29
                 T17965.hs:4:17
